--- a/main.css
+++ b/main.css
@@ -1,4 +1,32 @@
-body : {
+
+body {
+  background-color: darkgrey;
+}
 
 
+.card {
+  background-color:lightgray;
+  margin: 50px;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  color:#e2320a;
+}
+
+
+
+.image {
+    
+    border-radius: 6px;
+  
+
+}
+.description {
+  background-color: #0b5de2;
+  color: orange;
+}
+.card-title {
+  background-color: black;
+  color: orange;
 }
